# duit_rs

./: Cargo.toml
examples/: example.rs
src/: lib.rs
src/_into_cow_macro/: Cargo.toml
src/_into_cow_macro/src/: lib.rs
src/_value_ref_holder_macro/: Cargo.toml
src/_value_ref_holder_macro/src/: lib.rs
src/attributes/: container_attributes.rs  mod.rs  text_attributes.rs
src/core/: cow_trait.rs  mod.rs  value_ref.rs
src/duit_macro/: Cargo.toml
src/duit_macro/src/: lib.rs
src/properties/: font_weight.rs  mod.rs  text_direction.rs
src/widgets/: builder.rs  component.rs  json.rs  mod.rs  widget.rs  widget_impl.rs
