[package]
name = "duit_rs"
version = "0.0.1"
edition = "2024"

[lib]
name = "duit_rs"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
value_ref_holder_macro = { path = "src/_value_ref_holder_macro" }
into_cow_macro = { path = "src/_into_cow_macro" }