[package]
name = "duit_rs"
version = "0.0.1"
edition = "2024"

[lib]
name = "duit_rs"
path = "src/lib.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
duit_macro = { path = "src/duit_macro" }
anyhow = "1.0.100"
